--- a/celtics_championship_dna.html
+++ b/celtics_championship_dna.html
@@ -19,9 +19,9 @@
             line-height: 1.6;
         }
         
-        /* Back to Home Button */
+        /* Back to Home Button - Static Position (NOT fixed) */
         .back-nav {
-            position: fixed;
+            position: absolute;
             top: 20px;
             left: 20px;
             z-index: 1000;
@@ -56,6 +56,7 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 80px 20px 40px;
+            position: relative;
         }
         
         .header {
