--- a/celtics_championship_dna.html
+++ b/celtics_championship_dna.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Celtics Championship DNA | SQL Analysis</title>
     <meta name="description" content="SQL analysis comparing the 2024 Celtics championship team to recent NBA champions using advanced database queries and statistical analysis.">
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7HXVRPC9HS"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-7HXVRPC9HS');
+    </script>
+    <!-- End Google Analytics -->
+
     <style>
         * {
             margin: 0;
